# obstacle_detection

./: exclude
bounding_box/: CMakeLists.txt  CMakeLists.txt~  package.xml
bounding_box/src/: bounding_box.cpp  bounding_box.cpp~  bounding_box_1.cpp  bounding_box_ref.cpp  square_calib_vel.cpp  square_calib_vel_box.cpp
calibration_tf/: CMakeLists.txt  package.xml
calibration_tf/launch/: tf.launch
calibration_tf/scripts/: calib_tf_broadcaster_velodyne_auto.py
calibration_tf/src/: calib_tf_broadcaster.py  calib_tf_broadcaster_1.py  calib_tf_broadcaster_velodyne.py  calib_tf_broadcaster_velodyne_auto.py  project_velodyne.py
cari_msgs_perception/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cari_msgs_perception/msg/: Obstacle.msg  ObstacleArray.msg~
carina_description/launch/: carina2.launch
carina_description/urdf/: carina2.urdf  carina2.urdf.bkp  carina2_bien radar.urdf  carina2_ok.urdf  carina2_ultimo.urdf  carina2basesfrente.urdf  carina2dosframesbiencameraproyecta.urdf  carina2leftcameraver.urdf  carina2original.urdf
dbscan_pointcloud/: CMakeLists.txt  package.xml
dbscan_pointcloud/scripts/: dbscan.py
elas_lrm/: CMakeLists.txt
elas_lrm/launch/: elas.launch  elas2.launch  elas_a.launch  elas_carla.launch  elas_kittiplayer.launch  elas_with_logitech.launch
elas_lrm/src/: elas_lrm_node.cpp
msg_box3d/: CMakeLists.txt
msg_box3d/msg/: Num.msg~  NumArray.msg~  Obstacle.msg~  Perception.msg~
objclass2_3d/: CMakeLists.txt  package.xml
objclass2_3d/scripts/: imgbox2odom.py
obstacles_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
obstacles_rviz_plugin/meshes/: Ferrari-F138-chassis.mesh  Suzanne.001.mesh  Suzanne.001.mesh.xml  cBoxCivic.mesh  cBoxCivic.mesh.xml  robot.blend
obstacles_rviz_plugin/src/: obstacle_array_display.cpp  obstacle_array_display.h  obstacle_display.cpp  obstacle_display.h
obstacles_rviz_plugin/src/obstacles/: mesh_resource_obstacle.cpp  mesh_resource_obstacle.h  obstacle_base.cpp  obstacle_base.h  obstacle_selection_handler.cpp  obstacle_selection_handler.h  shape_obstacle.cpp  shape_obstacle.h
radar_stereo_fusion/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
tfsignals_stereo2_3d/: CMakeLists.txt  package.xml
traffic_sign/: CMakeLists.txt  package.xml
velodyne_height_map/: CMakeLists.txt
(+35 files in other folders)
